# customer_support_graphrag_application

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/ci_cd/dockerfiles/: fastapi.dockerfile
app/services/v1/: main.py
app/services/v1/schemas/QA/: __init__.py
app/services/v1/utils/chatbots/: __init__.py  qa_chatbot_v1.py
app/services/v1/utils/loggers/: __init__.py  qa_logger_v1.py
data/: appointments.csv  office_hours.csv  office_locations.csv  services.csv
dataprocessing/notebooks/: data_preprocessing.ipynb  qa_system.ipynb
standalone_gradio_app/: app.py  qa_chatbot.py
standalone_streamlit_app/: app.py  qa_chatbot.py
